--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -3,8 +3,8 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/docs/css/syntax.css">
-			<link rel="stylesheet" type="text/css" href="/docs/css/styles.css">
+			<link rel="stylesheet" type="text/css" href="/puddle-for-email/docs/css/syntax.css">
+			<link rel="stylesheet" type="text/css" href="/puddle-for-email/docs/css/styles.css">
 		</head>
 		<body>
 			<nav>
