--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -4,6 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			 <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}" />
+			 <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}" />
 		</head>
 		<body>
 			<nav>
