--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,7 +1,10 @@
 .highlight {
-  background-color:#eee;
-  width:90%;
-  max-height:400px;
-  overflow:scroll;
-  padding: 0 20px;
+  background-color: #eee;
+  width: 90%;
+  max-height: 400px;
+  overflow: scroll;
+}
+
+pre {
+  margin: 1em;
 }
