--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -3,8 +3,10 @@
   width: 90%;
   max-height: 400px;
   overflow: scroll;
+  border: 1px solid #e9eae4;
 }
 
 pre {
   margin: 1em;
+  background-color: #f7f7f7;
 }
