--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -8,7 +8,11 @@
 }
 
 pre {
-  margin: 0;
-  padding: 16px;
+  margin: 16px;
   width: 100%;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
