--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -8,8 +8,8 @@
 }
 
 pre {
-  margin: 16px;
-  width: 100%;
+  margin: 16px auto;
+  width: 95%;
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
