--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -5,6 +5,8 @@
 			 <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/email-styles.css" | prepend: site.baseurl }}" />
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+  crossorigin="anonymous"></script>
 		</head>
 		<body>
 			<nav>
