--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -5,8 +5,9 @@
 			 <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/email-styles.css" | prepend: site.baseurl }}" />
-			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-  crossorigin="anonymous"></script>
+			 <link rel="stylesheet" href="{{ "/css/email-styles.css" | prepend: site.baseurl }}" />
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+			<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 		</head>
 		<body>
 			<nav>
