--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -6,6 +6,11 @@
 			 <link rel="stylesheet" href="{{ "/css/styles.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/email-styles.css" | prepend: site.baseurl }}" />
 			 <link rel="stylesheet" href="{{ "/css/email-styles.css" | prepend: site.baseurl }}" />
+			<script>
+	$("#header_spacer").change(function(){
+  $("#code-example").html('{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}')
+});
+</script>
 		</head>
 		<body>
 			<nav>
