--- a/docs/_includes/mc_header-spacer.html
+++ b/docs/_includes/mc_header-spacer.html
@@ -1,36 +1,1 @@
-<div id='header_spacer-only'>
-	<table width='650' border='0' cellspacing='0' cellpadding='0' class='wrapper' mc:repeatable mc:variant='Header - Logo only'>
-		<tr>
-			<td>
-				<table width='650' border='0' cellspacing='0' cellpadding='0' align='center' class='wrapper'>
-					<tr>
-						<td width='30' class='hide'> </td>
-						<td>
-							<table width='100%' border='0' cellspacing='0' cellpadding='0' align='center'>
-								<tr>
-									<td height='10' class='fix_height'> </td>
-								</tr>
-								<tr>
-									<td>
-										<table width='600' border='0' cellspacing='0' cellpadding='0' align='center' class='wrapper'>
-											<tr>
-												<td style='font-family:'Proxima Nova', 'Open Sans', Arial, sans-serif;font-size:12px;line-height:15px;color:#333333;' align='center' mc:edit='header_spacer-only-help-text'>
-													<span style='display:inline-block; height:0px; font-size:0px; mso-hide:all;'>Preview Text</span>
-													<span class='cw-black'>Can’t see this email?</span> <a href='*|ARCHIVE|*' target='_blank' style='color:#369ff4;text-decoration:none;'>View it in your browser.</a>
-												</td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-								<tr>
-									<td height='10' class='fix_height'> </td>
-								</tr>
-							</table>
-						</td>
-						<td width='30' class='hide'> </td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
-</div>
+<div id="header_spacer-only"><table width="650" border="0" cellspacing="0" cellpadding="0" class="wrapper" mc:repeatable mc:variant="Header - Logo only"><tr><td><table width="650" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper"><tr><td width="30" class="hide"> </td><td><table width="100%" border="0" cellspacing="0" cellpadding="0" align="center"><tr><td height="10" class="fix_height"> </td></tr><tr><td><table width="600" border="0" cellspacing="0" cellpadding="0" align="center" class="wrapper"><tr><td style="font-family:"Proxima Nova", "Open Sans", Arial, sans-serif;font-size:12px;line-height:15px;color:#333333;" align="center" mc:edit="header_spacer-only-help-text"><span style="display:inline-block; height:0px; font-size:0px; mso-hide:all;">Preview Text</span><span class="cw-black">Can’t see this email?</span> <a href="*|ARCHIVE|*" target="_blank" style="color:#369ff4;text-decoration:none;">View it in your browser.</a></td></tr></table></td></tr><tr><td height="10" class="fix_height"> </td></tr></table></td><td width="30" class="hide"> </td></tr></table></td></tr></table></div>
