--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -29,8 +29,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script>
 	$("#header_spacer").change(function(){
-		var html = '{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}';
-         $('#code-example').html(html);
+         $('#code-example').html('{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}');
 });
 </script>
 			<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
