--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -29,8 +29,9 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script>
 	$("#header_spacer").change(function(){
+		var html= $("input[name=test]:checked").val();
 		var mc_header-spacer.html = '{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}';
-         $('#code-example').html($("input[name=test]:checked").val());
+         $('#code-example').html(html);
 });
 </script>
 			<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
