--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -30,8 +30,8 @@
 			<script>
 	$("#header_spacer").change(function(){
 		var html= $('input[name=test]:checked').val();
-		var mc_header_spacer = '{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}';
-         $('#code-example').html(html);
+		var mc_header_spacer = '{% highlight html %}{% include' + html + '%}{% endhighlight %}';
+         $('#code-example').html(mc_header_spacer);
 });
 </script>
 			<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
