--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -29,7 +29,7 @@
 			<script>
 	$("#header_spacer").change(function(){
 		var html= $('input[name=test]:checked').val();
-		var mc_header_spacer = "'{% highlight html %}{% include' + html '%}{% endhighlight %}'";
+		var mc_header_spacer = '{% highlight html %}{% include mc_header_spacer.html %}{% endhighlight %}';
          $('#code-example').html(mc_header_spacer);
 });
 </script>
