--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -28,8 +28,8 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script>
 	$("#header_spacer").change(function(){
-		var html= $('input[name=test]:checked').val();
-		var mc_header_spacer = '{% highlight html %}{% include mc_header-spacer.html %}{% endhighlight %}';
+		var html= "'{% include' + $('input[name=test]:checked').val() + '%}'";
+		var mc_header_spacer = "'{% highlight html %}' + html + '{% endhighlight %}'";
          $('#code-example').html(mc_header_spacer);
 });
 </script>
