--- a/docs/_layouts/builder.html
+++ b/docs/_layouts/builder.html
@@ -28,8 +28,7 @@
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 			<script>
 	$("#header_spacer").change(function(){
-		var html= {% include ($('input[name=test]:checked').val())%};
-		var mc_header_spacer = {% highlight html %} html {% endhighlight %};
+		var mc_header_spacer = {% highlight html %}{% include ($('input[name=test]:checked').val())%}{% endhighlight %};
          $('#code-example').html(mc_header_spacer);
 });
 </script>
