--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -9,6 +9,7 @@
 
 pre {
   margin: 16px auto;
+  font-size: 12px;
   width: 95%;
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
